--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -309,103 +309,119 @@
       become: true
       become_method: ansible.builtin.sudo
 
-    # - name: Ensure openshift-nmstate exists
-    #   kubernetes.core.k8s:
-    #     state: present
-    #     definition:
-    #       apiVersion: v1
-    #       kind: Namespace
-    #       metadata:
-    #         name: openshift-nmstate
-    #   register: namespacenmstate
-    #   retries: 60
-    #   delay: 10
-    #   ignore_errors: true
+    - name: Ensure openshift-nmstate exists
+      kubernetes.core.k8s:
+        state: present
+        definition:
+          apiVersion: v1
+          kind: Namespace
+          metadata:
+            name: openshift-nmstate
+      register: namespacenmstate
+      retries: 60
+      delay: 10
+      ignore_errors: true
+      when:
+        - nmstate_cfg | default(false) | bool
 
-    # - name: Create the nmstate operator group
-    #   kubernetes.core.k8s:
-    #     kind: OperatorGroup
-    #     definition:
-    #       apiVersion: operators.coreos.com/v1
-    #       kind: OperatorGroup
-    #       metadata:
-    #         annotations:
-    #           olm.providedAPIs: NMState.v1.nmstate.io
-    #         name: openshift-nmstate-flnnw
-    #         namespace: openshift-nmstate
-    #       spec:
-    #         targetNamespaces:
-    #           - openshift-nmstate
-    #         upgradeStrategy: Default
-    #   ignore_errors: true
+    - name: Create the nmstate operator group
+      kubernetes.core.k8s:
+        kind: OperatorGroup
+        definition:
+          apiVersion: operators.coreos.com/v1
+          kind: OperatorGroup
+          metadata:
+            annotations:
+              olm.providedAPIs: NMState.v1.nmstate.io
+            name: openshift-nmstate-flnnw
+            namespace: openshift-nmstate
+          spec:
+            targetNamespaces:
+              - openshift-nmstate
+            upgradeStrategy: Default
+      ignore_errors: true
+      when:
+        - nmstate_cfg | default(false) | bool
 
-    # - name: Create the nmstate subscription
-    #   kubernetes.core.k8s:
-    #     kind: Subscription
-    #     definition:
-    #       apiVersion: operators.coreos.com/v1alpha1
-    #       kind: Subscription
-    #       metadata:
-    #         labels:
-    #           operators.coreos.com/kubernetes-nmstate-operator.openshift-nmstate: ""
-    #         name: kubernetes-nmstate-operator
-    #         namespace: openshift-nmstate
-    #       spec:
-    #         channel: stable
-    #         installPlanApproval: Automatic
-    #         name: kubernetes-nmstate-operator
-    #         source: redhat-operators
-    #         sourceNamespace: openshift-marketplace
-    #   ignore_errors: true
+    - name: Create the nmstate subscription
+      kubernetes.core.k8s:
+        kind: Subscription
+        definition:
+          apiVersion: operators.coreos.com/v1alpha1
+          kind: Subscription
+          metadata:
+            labels:
+              operators.coreos.com/kubernetes-nmstate-operator.openshift-nmstate: ""
+            name: kubernetes-nmstate-operator
+            namespace: openshift-nmstate
+          spec:
+            channel: stable
+            installPlanApproval: Automatic
+            name: kubernetes-nmstate-operator
+            source: redhat-operators
+            sourceNamespace: openshift-marketplace
+      ignore_errors: true
+      when:
+        - nmstate_cfg | default(false) | bool
 
-    # - name: Pause for 20 seconds to wait for pods
-    #   ansible.builtin.pause:
-    #     seconds: 20
+    - name: Pause for 20 seconds to wait for pods
+      ansible.builtin.pause:
+        seconds: 20
+      when:
+        - nmstate_cfg | default(false) | bool
 
-    # - name: Wait for all pods to be running on openshift-nmstate
-    #   kubernetes.core.k8s_info:
-    #     api_version: v1
-    #     kind: Pod
-    #     namespace: "openshift-nmstate"
-    #   register: pod_list
-    #   until: pod_list.resources | selectattr('status.phase', 'eq', 'Running') | list | length == pod_list.resources | length
-    #   retries: 60
-    #   delay: 10
-    #   ignore_errors: true
+    - name: Wait for all pods to be running on openshift-nmstate
+      kubernetes.core.k8s_info:
+        api_version: v1
+        kind: Pod
+        namespace: "openshift-nmstate"
+      register: pod_list
+      until: pod_list.resources | selectattr('status.phase', 'eq', 'Running') | list | length == pod_list.resources | length
+      retries: 60
+      delay: 10
+      ignore_errors: true
+      when:
+        - nmstate_cfg | default(false) | bool
 
-    # - name: Create the nmstate
-    #   kubernetes.core.k8s:
-    #     kind: NMState
-    #     definition:
-    #       apiVersion: nmstate.io/v1
-    #       kind: NMState
-    #       metadata:
-    #         name: nmstate
-    #       spec: {}
-    #   ignore_errors: true
+    - name: Create the nmstate
+      kubernetes.core.k8s:
+        kind: NMState
+        definition:
+          apiVersion: nmstate.io/v1
+          kind: NMState
+          metadata:
+            name: nmstate
+          spec: {}
+      ignore_errors: true
+      when:
+        - nmstate_cfg | default(false) | bool
 
-    # - name: Pause for 20 seconds to create nmstate CRD
-    #   ansible.builtin.pause:
-    #     seconds: 20
+    - name: Pause for 20 seconds to create nmstate CRD
+      ansible.builtin.pause:
+        seconds: 20
+      when:
+        - nmstate_cfg | default(false) | bool
 
-    # - name: Configuring NMState NNCP
-    #   kubernetes.core.k8s:
-    #     kind: NodeNetworkConfigurationPolicy
-    #     definition:
-    #       apiVersion: nmstate.io/v1
-    #       kind: NodeNetworkConfigurationPolicy
-    #       metadata:
-    #         name: br-ex-network
-    #       spec:
-    #         nodeSelector:
-    #           node-role.kubernetes.io/worker: ''
-    #         desiredState:
-    #           ovn:
-    #             bridge-mappings:
-    #               - localnet: br-ex-network
-    #                 bridge: br-ex
-    #                 state: present
-    #   ignore_errors: true
+    - name: Configuring NMState NNCP
+      kubernetes.core.k8s:
+        kind: NodeNetworkConfigurationPolicy
+        definition:
+          apiVersion: nmstate.io/v1
+          kind: NodeNetworkConfigurationPolicy
+          metadata:
+            name: br-ex-network
+          spec:
+            nodeSelector:
+              node-role.kubernetes.io/worker: ''
+            desiredState:
+              ovn:
+                bridge-mappings:
+                  - localnet: br-ex-network
+                    bridge: br-ex
+                    state: present
+      ignore_errors: true
+      when:
+        - nmstate_cfg | default(false) | bool
 
     - name: Remove argocd CRD on openshift-gitops
       kubernetes.core.k8s:
@@ -504,4 +520,10 @@
       ansible.builtin.command:
         cmd: bash /home/lab-user/generate-tmux-session.sh
       register: tmuxsessionfile
+      ignore_errors: true
+
+    - name: Enabling multi network policy
+      ansible.builtin.command:
+        cmd: oc patch network cluster --type='merge' -p '{"spec":{"useMultiNetworkPolicy":true}}'
+      register: enablemnp
       ignore_errors: true
