--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -451,7 +451,7 @@
       loop: "{{ application_crds.resources }}"
       ignore_errors: true
 
-    - name: Remover finalizer of the applications
+    - name: Remove finalizer of the applications
       kubernetes.core.k8s:
         kind: Application
         api_version: argoproj.io/v1alpha1
@@ -480,7 +480,7 @@
       with_sequence: start=1 end={{ num_users }}
       ignore_errors: true
 
-    - name: Remover a assinatura do operador OpenShift GitOps
+    - name: Remove Subscription OpenShift GitOps
       kubernetes.core.k8s:
         api_version: operators.coreos.com/v1alpha1
         namespace: openshift-operators
@@ -489,7 +489,7 @@
         state: absent
       ignore_errors: true
 
-    - name: Remover o ClusterServiceVersion associado ao operador OpenShift GitOps
+    - name: Remove ClusterServiceVersion OpenShift GitOps
       kubernetes.core.k8s:
         api_version: operators.coreos.com/v1alpha1
         namespace: openshift-operators
