changed ex 10 to new exercise

--- a/exercise10-clean.yaml
+++ b/exercise10-clean.yaml
@@ -6,17 +6,47 @@
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
-    - name: Exercise10 - Removing VM
+    - name: Removing VM A
       kubernetes.core.k8s:
         state: absent
-        template: "exercise10-create-vm.yaml.j2"
-      register: deletevm
-      until: deletevm is succeeded
+        template: "exercise10-create-vm-a.yaml.j2"
+      register: deletevma
+      until: deletevma is succeeded
       retries: 60
       delay: 10
-      failed_when: deletevm is failed or deletevm.failed
+      failed_when: deletevma is failed or deletevma.failed
 
-    - name: Exercise10 - Removing NAD
+    - name: Removing VM B
+      kubernetes.core.k8s:
+        state: absent
+        template: "exercise10-create-vm-b.yaml.j2"
+      register: deletevmb
+      until: deletevmb is succeeded
+      retries: 60
+      delay: 10
+      failed_when: deletevma is failed or deletevma.failed
+
+    - name: Wait for the Virtual Machine A to be removed
+      kubernetes.core.k8s_info:
+        kind: VirtualMachine
+        namespace: "namespace-{{ user }}"
+        name: "exercise10-a"
+      register: cleanvma
+      retries: 60
+      delay: 2
+      until: cleanvma.resources | length == 0
+
+    - name: Wait for the Virtual Machine B to be removed
+      kubernetes.core.k8s_info:
+        kind: VirtualMachine
+        namespace: "namespace-{{ user }}"
+        name: "exercise10-b"
+      register: cleanvmb
+      retries: 60
+      delay: 2
+      until: cleanvmb.resources | length == 0
+
+    - name: Removing NAD
       kubernetes.core.k8s:
         state: absent
         template: "exercise10-create-nad.yaml.j2"
@@ -25,3 +55,13 @@
       retries: 60
       delay: 10
       failed_when: deletenad is failed or deletenad.failed
+
+    - name: Removing the idrsa secret
+      kubernetes.core.k8s:
+        state: absent
+        template: "exercise10-secret.yaml.j2"
+      register: secretidrsa
+      until: secretidrsa is succeeded
+      retries: 60
+      delay: 10
+      failed_when: secretidrsa is failed or secretidrsa.failed
