--- a/exercise10-break.yaml
+++ b/exercise10-break.yaml
@@ -1,4 +1,4 @@
-- name: Preparing exercise10
+- name: Preparing  exercise10
   hosts: localhost
   gather_facts: true
 
@@ -6,7 +6,18 @@
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
-    - name: Exercise10 - Creating NAD
+    - name: Create SSH config file with StrictHostKeyChecking no
+      ansible.builtin.copy:
+        dest: '/home/{{ user }}/.ssh/config'
+        content: |
+          Host *
+            StrictHostKeyChecking no
+            UserKnownHostsFile /dev/null
+        owner: '{{ user }}'
+        group: '{{ user }}'
+        mode: '0600'
+
+    - name: Creating NAD
       kubernetes.core.k8s:
         state: present
         template: "exercise10-create-nad.yaml.j2"
@@ -16,12 +27,61 @@
       delay: 10
       failed_when: createnad is failed or createnad.failed
 
-    - name: Exercise10 - Creating VM
+    - name: Get user SSH key
+      ansible.builtin.slurp:
+        src: "/home/{{ user }}/.ssh/id_rsa.pub"
+      register: usersshkey
+
+    - name: Create the idrsa secret
       kubernetes.core.k8s:
         state: present
-        template: "exercise10-create-vm.yaml.j2"
-      register: createvm
-      until: createvm is succeeded
+        template: "exercise10-secret.yaml.j2"
+      register: secretidrsa
+      until: secretidrsa is succeeded
       retries: 60
       delay: 10
-      failed_when: createvm is failed or createvm.failed
+      failed_when: secretidrsa is failed or secretidrsa.failed
+
+    - name: Creating VM A
+      kubernetes.core.k8s:
+        state: present
+        template: "exercise10-create-vm-a.yaml.j2"
+      register: createvma
+      until: createvma is succeeded
+      retries: 60
+      delay: 10
+      failed_when: createvma is failed or createvma.failed
+
+    - name: Creating VM B
+      kubernetes.core.k8s:
+        state: present
+        template: "exercise10-create-vm-b.yaml.j2"
+      register: createvmb
+      until: createvmb is succeeded
+      retries: 60
+      delay: 10
+      failed_when: createvmb is failed or createvmb.failed
+
+    - name: Wait for VM A to be running
+      kubernetes.core.k8s_info:
+        api_version: kubevirt.io/v1
+        kind: VirtualMachineInstance
+        namespace: "namespace-{{ user }}"
+        name: "exercise10-a"
+      register: exercise10ainfo
+      until: " exercise10ainfo.resources | length > 0 and exercise10ainfo.resources[0].status.phase == 'Running'"
+      retries: 60
+      delay: 10
+      failed_when: exercise10ainfo.resources | length == 0
+
+    - name: Wait for VM B to be running
+      kubernetes.core.k8s_info:
+        api_version: kubevirt.io/v1
+        kind: VirtualMachineInstance
+        namespace: "namespace-{{ user }}"
+        name: "exercise10-b"
+      register: exercise10binfo
+      until: " exercise10binfo.resources | length > 0 and exercise10binfo.resources[0].status.phase == 'Running'"
+      retries: 60
+      delay: 10
+      failed_when: exercise10binfo.resources | length == 0
