--- a/exercise10-clean.yaml
+++ b/exercise10-clean.yaml
@@ -56,6 +56,11 @@
       delay: 10
       failed_when: deletenad is failed or deletenad.failed
 
+    - name: Get user SSH key
+      ansible.builtin.slurp:
+        src: "/home/{{ user }}/.ssh/id_rsa.pub"
+      register: usersshkey
+
     - name: Removing the idrsa secret
       kubernetes.core.k8s:
         state: absent
