--- a/exercise11-clean.yaml
+++ b/exercise11-clean.yaml
@@ -55,6 +55,11 @@
       retries: 60
       delay: 10
       failed_when: deletenad is failed or deletenad.failed
+  
+      - name: Get user SSH key
+      ansible.builtin.slurp:
+        src: "/home/{{ user }}/.ssh/id_rsa.pub"
+      register: usersshkey
 
     - name: Removing the idrsa secret
       kubernetes.core.k8s:
