--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -259,6 +259,27 @@
       with_sequence: start=1 end={{ num_users }}
       ignore_errors: true
 
+    - name: Create the ClusterRole to user metrics
+      kubernetes.core.k8s:
+        kind: ClusterRole
+        namespace: 'namespace-user{{ item | int }}'
+        definition:
+          apiVersion: rbac.authorization.k8s.io/v1
+          kind: ClusterRoleBinding
+          metadata:
+            name: 'cluster-monitoring-view-user{{ item | int }}'
+            namespace: 'namespace-user{{ item | int }}'
+          roleRef:
+            apiGroup: rbac.authorization.k8s.io
+            kind: ClusterRole
+            name: cluster-monitoring-view
+          subjects:
+            - apiGroup: rbac.authorization.k8s.io
+              kind: User
+              name: 'user{{ item | int }}'
+      with_sequence: start=1 end={{ num_users }}
+      ignore_errors: true
+
     - name: Create the ClusterRoleBinding to user view server info
       kubernetes.core.k8s:
         kind: ClusterRoleBinding
