--- a/exercise4-break.yaml
+++ b/exercise4-break.yaml
@@ -6,6 +6,21 @@
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
+    - name: Get user SSH key
+      ansible.builtin.slurp:
+        src: "/home/{{ user }}/.ssh/id_rsa.pub"
+      register: usersshkey
+
+    - name: Create the idrsa secret
+      kubernetes.core.k8s:
+        state: present
+        template: "exercise4-secret.yaml.j2"
+      register: secretidrsa
+      until: secretidrsa is succeeded
+      retries: 60
+      delay: 10
+      failed_when: secretidrsa is failed or secretidrsa.failed
+
     - name: Creating exercise4 virtual machine
       kubernetes.core.k8s:
         state: present
@@ -27,3 +42,7 @@
       retries: 60
       delay: 10
       failed_when: exercise4info.resources | length == 0
+
+    - name: Sleeping for 2 minutes to generate data on dashboards, you can get a coffee!
+      ansible.builtin.pause:
+        minutes: 2
