--- a/exercise4-fix.yaml
+++ b/exercise4-fix.yaml
@@ -6,22 +6,56 @@
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
-    - name: Set VM to stopped state
+    - name: Removing exercise4 virtual machine
       kubernetes.core.k8s:
-        namespace: "namespace-{{ user }}"
-        kind: VirtualMachine
-        name: exercise4
-        state: present
-        definition:
-          spec:
-            running: false
-      register: stopvm
-      until: stopvm is succeeded
+        state: absent
+        template: "exercise4-break-vm.yaml.j2"
+      register: exercise4vm
+      until: exercise4vm is succeeded
       retries: 60
       delay: 10
-      failed_when: stopvm is failed or stopvm.failed
+      failed_when: exercise4vm is failed or exercise4vm.failed
 
-    - name: Fixing exercise4 virtual machine
+    - name: Wait for the Virtual Machine to be removed
+      kubernetes.core.k8s_info:
+        kind: VirtualMachine
+        namespace: "namespace-{{ user }}"
+        name: "exercise4"
+      register: cleanvm
+      retries: 60
+      delay: 2
+      until: cleanvm.resources | length == 0
+
+    - name: Get user SSH key
+      ansible.builtin.slurp:
+        src: "/home/{{ user }}/.ssh/id_rsa.pub"
+      register: usersshkey
+
+    - name: Removing the idrsa secret
+      kubernetes.core.k8s:
+        state: absent
+        template: "exercise4-secret.yaml.j2"
+      register: secretidrsa
+      until: secretidrsa is succeeded
+      retries: 60
+      delay: 10
+
+    - name: Get user SSH key
+      ansible.builtin.slurp:
+        src: "/home/{{ user }}/.ssh/id_rsa.pub"
+      register: usersshkey
+
+    - name: Create the idrsa secret
+      kubernetes.core.k8s:
+        state: present
+        template: "exercise4-secret.yaml.j2"
+      register: secretidrsa
+      until: secretidrsa is succeeded
+      retries: 60
+      delay: 10
+      failed_when: secretidrsa is failed or secretidrsa.failed
+
+    - name: Creating exercise4 virtual machine
       kubernetes.core.k8s:
         state: present
         template: "exercise4-fix-vm.yaml.j2"
@@ -30,21 +64,6 @@
       retries: 60
       delay: 10
       failed_when: exercise4vm is failed or exercise4vm.failed
-
-    - name: Set VM to start state
-      kubernetes.core.k8s:
-        namespace: "namespace-{{ user }}"
-        kind: VirtualMachine
-        name: exercise4
-        state: present
-        definition:
-          spec:
-            running: true
-      register: startvm
-      until: startvm is succeeded
-      retries: 60
-      delay: 10
-      failed_when: startvm is failed or startvm.failed
 
     - name: Wait for VM to be running
       kubernetes.core.k8s_info:
@@ -57,3 +76,8 @@
       retries: 60
       delay: 10
       failed_when: exercise4info.resources | length == 0
+
+    - name: Sleeping for 2 minutes to generate data on dashboards, you can get a coffee!
+      ansible.builtin.pause:
+        minutes: 2
+
