added dynamic ssh key on ex4

--- a/exercise4-break.yaml
+++ b/exercise4-break.yaml
@@ -6,6 +6,17 @@
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
+    - name: Create SSH config file with StrictHostKeyChecking no
+      ansible.builtin.copy:
+        dest: '/home/{{ user }}/.ssh/config'
+        content: |
+          Host *
+            StrictHostKeyChecking no
+            UserKnownHostsFile /dev/null
+        owner: '{{ user }}'
+        group: '{{ user }}'
+        mode: '0600'
+
     - name: Get user SSH key
       ansible.builtin.slurp:
         src: "/home/{{ user }}/.ssh/id_rsa.pub"
