--- a/exercise10-break.yaml
+++ b/exercise10-break.yaml
@@ -85,3 +85,16 @@
       retries: 60
       delay: 10
       failed_when: exercise10binfo.resources | length == 0
+
+    - name: Configuring NAD
+      kubernetes.core.k8s:
+       kind: NetworkAttachmentDefinition
+       definition:
+         apiVersion: k8s.cni.cncf.io/v1
+         kind: NetworkAttachmentDefinition
+         metadata:
+           name: exercise10-nad-layer2
+           namespace: "namespace-{{ user }}"
+         spec:
+           config: '{"name":"exercise10-nad-layer2","type":"ovn-k8s-cni-overlay","cniVersion":"0.3.1","topology":"layer2","netAttachDefName":"namespace-{{ user }}/exercise10-nad-layer2"}'
+       state: present
