--- a/exercise10-break.yaml
+++ b/exercise10-break.yaml
@@ -86,12 +86,12 @@
       delay: 10
       failed_when: exercise10binfo.resources | length == 0
 
-    - name: Creating NAD 2
-      kubernetes.core.k8s:
-        state: present
-        template: "exercise10-create-nad-layer2.yaml.j2"
-      register: createnad2
-      until: createnad2 is succeeded
-      retries: 60
-      delay: 10
-      failed_when: createnad2 is failed or createnad2.failed
+    # - name: Creating NAD 2
+    #   kubernetes.core.k8s:
+    #     state: present
+    #     template: "exercise10-create-nad-layer2.yaml.j2"
+    #   register: createnad2
+    #   until: createnad2 is succeeded
+    #   retries: 60
+    #   delay: 10
+    #   failed_when: createnad2 is failed or createnad2.failed
