--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -594,7 +594,7 @@
           apiVersion: rbac.authorization.k8s.io/v1
           kind: ClusterRoleBinding
           metadata:
-            name: network-access-binding
+            name: network-access-binding-user{{ item }}
           subjects:
             - kind: User
               name: user{{ item }}
