--- a/exercise10-grade.yaml
+++ b/exercise10-grade.yaml
@@ -11,8 +11,8 @@
         cmd: virtctl ssh lab-user@exercise10-a --command 'ping -c1 192.168.0.11'
       ignore_errors: true
       no_log: true
-      register: testing
-      until: testing.rc == 0
+      register: testping
+      until: testping.rc == 0
       retries: 5
       delay: 5
 
