--- a/exercise12-grade.yaml
+++ b/exercise12-grade.yaml
@@ -1,4 +1,4 @@
-- name: Grading the exercise11
+- name: Grading the exercise12
   hosts: localhost
   gather_facts: true
 
@@ -6,21 +6,26 @@
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
-    - name: Check if exercise11-b vm is reachable
+    - name: Getting the exercise10-b ip address
       ansible.builtin.command:
-        cmd: virtctl ssh lab-user@exercise11-a --command 'ping -c1 192.168.0.11'
+        cmd: "oc get vmi exercise12-b -n namespace-{{ user }} -o jsonpath='{.status.interfaces[1].ipAddress}'"
+      register: exercise11bip
+
+    - name: Check if exercise12-b vm is reachable
+      ansible.builtin.command:
+        cmd: virtctl ssh lab-user@exercise11-a --command 'curl --connect-timeout 2 http://{{ exercise11bip.stdout }}'
       ignore_errors: true
       no_log: true
       register: testping
       retries: 12
       delay: 5
 
-    - name: Check the exercise11-b status
+    - name: Check the exercise12-b status
       ansible.builtin.fail:
         msg: "Ooops, The exercise11-b virtual machine is not reachable."
       when: testping.rc != 0
 
-    - name: Check the exercise11-b status
+    - name: Check the exercise12-b status
       ansible.builtin.debug:
         msg: "Nice job, the access to all virtual machines are working as expected."
       when: testping.rc == 0
