--- a/exercise12-grade.yaml
+++ b/exercise12-grade.yaml
@@ -11,21 +11,22 @@
         cmd: "oc get vmi exercise12-b -n namespace-{{ user }} -o jsonpath='{.status.interfaces[1].ipAddress}'"
       register: exercise11bip
 
-    - name: Check if exercise12-b vm is reachable
+    - name: Check if exercise12-b app is reachable
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise11-a --command 'curl --connect-timeout 2 http://{{ exercise11bip.stdout }}'
       ignore_errors: true
       no_log: true
-      register: testping
+      register: testcurl
+      until: testcurl.rc == 0
       retries: 12
       delay: 5
 
     - name: Check the exercise12-b status
       ansible.builtin.fail:
         msg: "Ooops, The exercise11-b virtual machine is not reachable."
-      when: testping.rc != 0
+      when: testcurl.rc != 0
 
     - name: Check the exercise12-b status
       ansible.builtin.debug:
         msg: "Nice job, the access to all virtual machines are working as expected."
-      when: testping.rc == 0
+      when: testcurl.rc == 0
