--- a/exercise12-grade.yaml
+++ b/exercise12-grade.yaml
@@ -23,10 +23,10 @@
 
     - name: Check the exercise12-b status
       ansible.builtin.fail:
-        msg: "Ooops, The exercise11-b virtual machine is not reachable."
+        msg: "Ooops, The exercise11-b virtual machine app is not reachable."
       when: testcurl.rc != 0
 
     - name: Check the exercise12-b status
       ansible.builtin.debug:
-        msg: "Nice job, the access to all virtual machines are working as expected."
+        msg: "Hey Hey Hey, it's working!!"
       when: testcurl.rc == 0
