--- a/exercise8-grade.yaml
+++ b/exercise8-grade.yaml
@@ -12,6 +12,9 @@
       ignore_errors: true
       no_log: true
       register: testssh
+      until: testssh.rc == 0
+      retries: 12
+      delay: 5
 
     - name: Check if vn be accessed over SSH
       ansible.builtin.fail:
