--- a/exercise5-break.yaml
+++ b/exercise5-break.yaml
@@ -6,7 +6,7 @@
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
-    - name: Exercise5 - Creating virtual machine
+    - name: Creating virtual machine
       kubernetes.core.k8s:
         state: present
         template: "exercise5-create-vm.yaml.j2"
@@ -16,7 +16,7 @@
       delay: 10
       failed_when: exercise5vm is failed or exercise5vm.failed
 
-    - name: Exercise5 - Wait for VM to be running
+    - name: Wait for VM to be running
       kubernetes.core.k8s_info:
         api_version: kubevirt.io/v1
         kind: VirtualMachineInstance
@@ -28,7 +28,7 @@
       delay: 10
       failed_when: exercise5info.resources | length == 0
     
-    - name: Exercise5 - Add data volume to virtual machine
+    - name: Add data volume to virtual machine
       kubernetes.core.k8s:
         state: present
         template: "exercise5-breakdatavol.yaml.j2"
@@ -38,6 +38,6 @@
       delay: 10
       failed_when: exercise5datavol is failed or exercise5datavol.failed
 
-    - name: Exercise5 - Add data disk 1 to virtual machine
+    - name: Add data disk 1 to virtual machine
       ansible.builtin.command: virtctl addvolume exercise5 --volume-name=exercise5-vol-data1 --persist
       register: exercise5fixdatadisk1
