--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -405,45 +405,6 @@
       when:
         - nmstate_cfg | default(false) | bool
 
-    - name: Create the nmstate
-      kubernetes.core.k8s:
-        kind: NMState
-        definition:
-          apiVersion: nmstate.io/v1
-          kind: NMState
-          metadata:
-            name: nmstate
-          spec: {}
-      when:
-        - nmstate_cfg | default(false) | bool
-
-    - name: Pause for 20 seconds to create nmstate CRD
-      ansible.builtin.pause:
-        seconds: 20
-      when:
-        - nmstate_cfg | default(false) | bool
-
-    # - name: Configuring NMState NNCP
-    #   kubernetes.core.k8s:
-    #     kind: NodeNetworkConfigurationPolicy
-    #     definition:
-    #       apiVersion: nmstate.io/v1
-    #       kind: NodeNetworkConfigurationPolicy
-    #       metadata:
-    #         name: br-ex-network
-    #       spec:
-    #         nodeSelector:
-    #           node-role.kubernetes.io/worker: ''
-    #         desiredState:
-    #           ovn:
-    #             bridge-mappings:
-    #               - localnet: br-ex-network
-    #                 bridge: br-ex
-    #                 state: present
-    #   ignore_errors: true
-    #   when:
-    #     - nmstate_cfg | default(false) | bool
-
     - name: Remove argocd CRD on openshift-gitops
       kubernetes.core.k8s:
         kind: ArgoCD
@@ -608,20 +569,15 @@
             apiGroup: rbac.authorization.k8s.io
       with_sequence: start=1 end={{ num_users }}
 
-    # - name: Configuring br-network net-attach on all users
-    #   kubernetes.core.k8s:
-    #    kind: NetworkAttachmentDefinition
-    #    definition:
-    #      apiVersion: k8s.cni.cncf.io/v1
-    #      kind: NetworkAttachmentDefinition
-    #      metadata:
-    #        name: br-ex-network
-    #        namespace: 'namespace-user{{ item }}'
-    #      spec:
-    #        config: '{"name":"br-ex-network","type":"ovn-k8s-cni-overlay","cniVersion":"0.3.1","topology":"layer2","netAttachDefName":"namespace-user{{ item }}/br-ex-network"}'
-    #    state: present
-    #   ignore_errors: true
-    #   when:
-    #     - nmstate_cfg | default(false) | bool
-    #   with_sequence: start=1 end={{ num_users }}
-
+    - name: Create the nmstate
+      kubernetes.core.k8s:
+        kind: NMState
+        definition:
+          apiVersion: nmstate.io/v1
+          kind: NMState
+          metadata:
+            name: nmstate
+          spec: {}
+      when:
+        - nmstate_cfg | default(false) | bool
+      ignore_errors: true
