--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -320,6 +320,7 @@
       with_sequence: start=1 end={{ num_users }}
       become: true
       become_method: ansible.builtin.sudo
+      ignore_errors: true
 
     - name: Generate RSA 2048 SSH key pair for users
       community.crypto.openssh_keypair:
@@ -334,6 +335,7 @@
       with_sequence: start=1 end={{ num_users }}
       become: true
       become_method: ansible.builtin.sudo
+      ignore_errors: true
 
     - name: Ensure openshift-nmstate exists
       kubernetes.core.k8s:
