updated exercise5 for gcp env

--- a/exercise5-break.yaml
+++ b/exercise5-break.yaml
@@ -40,4 +40,4 @@
 
     - name: Add data disk 1 to virtual machine
       ansible.builtin.command: virtctl addvolume exercise5 --volume-name=exercise5-vol-data1 --persist
-      register: exercise5fixdatadisk1
+      register: exercise5adddatadisk1
