--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -607,12 +607,12 @@
       ansible.builtin.command:
         cmd: >
           oc debug node/{{ item }} -- chroot /host bash -c "echo 1 > /proc/sys/net/ipv4/ip_forward"
-      register: ipforward
+      register: changeipforward
       with_items: "{{ node_names }}"
 
     - name: Execute sysctl -p on OCP nodes
       ansible.builtin.command:
         cmd: >
           oc debug node/{{ item }} -- chroot /host bash -c "sudo sysctl -p"
-      register: ipforward
+      register: sysctlp
       with_items: "{{ node_names }}"
