--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -571,38 +571,38 @@
             apiGroup: rbac.authorization.k8s.io
       with_sequence: start=1 end={{ num_users }}
 
-    - name: Get list of OCP nodes
-      kubernetes.core.k8s_info:
-        kind: Node
-      register: node_list
+    # - name: Get list of OCP nodes
+    #   kubernetes.core.k8s_info:
+    #     kind: Node
+    #   register: node_list
 
-    - name: Extract node names
-      ansible.builtin.set_fact:
-        node_names: "{{ node_list.resources | map(attribute='metadata.name') | list }}"
+    # - name: Extract node names
+    #   ansible.builtin.set_fact:
+    #     node_names: "{{ node_list.resources | map(attribute='metadata.name') | list }}"
  
-    - name: Wait for ip_forward to be 0 on OCP nodes
-      ansible.builtin.command:
-        cmd: >
-          oc debug node/{{ item }} -- chroot /host bash -c "cat /proc/sys/net/ipv4/ip_forward"
-      register: ipforward
-      until: ipforward.stdout == "0"
-      retries: 60
-      delay: 10
-      with_items: "{{ node_names }}"
+    # - name: Wait for ip_forward to be 0 on OCP nodes
+    #   ansible.builtin.command:
+    #     cmd: >
+    #       oc debug node/{{ item }} -- chroot /host bash -c "cat /proc/sys/net/ipv4/ip_forward"
+    #   register: ipforward
+    #   until: ipforward.stdout == "0"
+    #   retries: 60
+    #   delay: 10
+    #   with_items: "{{ node_names }}"
 
-    - name: Change ip_forward to be 1 on OCP nodes
-      ansible.builtin.command:
-        cmd: >
-          oc debug node/{{ item }} -- chroot /host bash -c "echo 1 > /proc/sys/net/ipv4/ip_forward"
-      register: changeipforward
-      with_items: "{{ node_names }}"
+    # - name: Change ip_forward to be 1 on OCP nodes
+    #   ansible.builtin.command:
+    #     cmd: >
+    #       oc debug node/{{ item }} -- chroot /host bash -c "echo 1 > /proc/sys/net/ipv4/ip_forward"
+    #   register: changeipforward
+    #   with_items: "{{ node_names }}"
 
-    - name: Execute sysctl -p on OCP nodes
-      ansible.builtin.command:
-        cmd: >
-          oc debug node/{{ item }} -- chroot /host bash -c "sudo sysctl -p"
-      register: sysctlp
-      with_items: "{{ node_names }}"
+    # - name: Execute sysctl -p on OCP nodes
+    #   ansible.builtin.command:
+    #     cmd: >
+    #       oc debug node/{{ item }} -- chroot /host bash -c "sudo sysctl -p"
+    #   register: sysctlp
+    #   with_items: "{{ node_names }}"
 
     - name: Create the nmstate
       kubernetes.core.k8s:
